Добавил сущности + продолжил избавляться от старых исходников + мелкие правки

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <base href="<?=$this->basePath('/'); ?>">
     <?=$this->headMeta()
         ->appendName('viewport', 'width=device-width, initial-scale=1.0')
         ->appendHttpEquiv('X-UA-Compatible', 'IE=edge')
@@ -65,41 +66,41 @@
 <?=$this->headScript()
     ->prependFile($this->basePath("/app/theme/components/backTop/lib/jquery.backTop.min.js"))
     ->prependFile($this->basePath("/app/theme/components/backTop/backTop.directive.js"))
-//    ->prependFile($this->basePath("/app/theme/filters/text/removeHtml.js"))
+    ->prependFile($this->basePath("/app/theme/filters/text/removeHtml.js"))
     ->prependFile($this->basePath("/app/theme/filters/image/profilePicture.js"))
-//    ->prependFile($this->basePath("/app/theme/filters/image/kameleonImg.js"))
-//    ->prependFile($this->basePath("/app/theme/filters/image/appImage.js"))
-//    ->prependFile($this->basePath("/app/theme/components/widgets/widgets.directive.js"))
+    ->prependFile($this->basePath("/app/theme/filters/image/kameleonImg.js"))
+    ->prependFile($this->basePath("/app/theme/filters/image/appImage.js"))
+    ->prependFile($this->basePath("/app/theme/components/widgets/widgets.directive.js"))
     ->prependFile($this->basePath("/app/theme/components/pageTop/pageTop.directive.js"))
-//    ->prependFile($this->basePath("/app/theme/components/msgCenter/msgCenter.directive.js"))
-//    ->prependFile($this->basePath("/app/theme/components/msgCenter/MsgCenterCtrl.js"))
+    ->prependFile($this->basePath("/app/theme/components/msgCenter/msgCenter.directive.js"))
+    ->prependFile($this->basePath("/app/theme/components/msgCenter/MsgCenterCtrl.js"))
     ->prependFile($this->basePath("/app/theme/components/contentTop/contentTop.directive.js"))
-//    ->prependFile($this->basePath("/app/theme/components/baWizard/baWizardStep.directive.js"))
-//    ->prependFile($this->basePath("/app/theme/components/baWizard/baWizardCtrl.js"))
-//    ->prependFile($this->basePath("/app/theme/components/baWizard/baWizard.directive.js"))
+    ->prependFile($this->basePath("/app/theme/components/baWizard/baWizardStep.directive.js"))
+    ->prependFile($this->basePath("/app/theme/components/baWizard/baWizardCtrl.js"))
+    ->prependFile($this->basePath("/app/theme/components/baWizard/baWizard.directive.js"))
     ->prependFile($this->basePath("/app/theme/components/baSidebar/baSidebarHelpers.directive.js"))
     ->prependFile($this->basePath("/app/theme/components/baSidebar/baSidebar.service.js"))
     ->prependFile($this->basePath("/app/theme/components/baSidebar/baSidebar.directive.js"))
     ->prependFile($this->basePath("/app/theme/components/baSidebar/BaSidebarCtrl.js"))
     ->prependFile($this->basePath("/app/theme/components/baPanel/baPanelSelf.directive.js"))
-//    ->prependFile($this->basePath("/app/theme/components/baPanel/baPanelBlurHelper.service.js"))
-//    ->prependFile($this->basePath("/app/theme/components/baPanel/baPanelBlur.directive.js"))
+    ->prependFile($this->basePath("/app/theme/components/baPanel/baPanelBlurHelper.service.js"))
+    ->prependFile($this->basePath("/app/theme/components/baPanel/baPanelBlur.directive.js"))
     ->prependFile($this->basePath("/app/theme/components/baPanel/baPanel.service.js"))
     ->prependFile($this->basePath("/app/theme/components/baPanel/baPanel.directive.js"))
-//    ->prependFile($this->basePath("/app/theme/services/stopableInterval.js"))
+    ->prependFile($this->basePath("/app/theme/services/stopableInterval.js"))
     ->prependFile($this->basePath("/app/theme/services/preloader.js"))
-//    ->prependFile($this->basePath("/app/theme/services/fileReader.js"))
+    ->prependFile($this->basePath("/app/theme/services/fileReader.js"))
     ->prependFile($this->basePath("/app/theme/services/baUtil.js"))
-//    ->prependFile($this->basePath("/app/theme/directives/zoomIn.js"))
-//    ->prependFile($this->basePath("/app/theme/directives/trackWidth.js"))
-//    ->prependFile($this->basePath("/app/theme/directives/scrollPosition.js"))
-//    ->prependFile($this->basePath("/app/theme/directives/ngFileSelect.js"))
-//    ->prependFile($this->basePath("/app/theme/directives/ionSlider.js"))
-//    ->prependFile($this->basePath("/app/theme/directives/includeWithScope.js"))
-//    ->prependFile($this->basePath("/app/theme/directives/autoFocus.js"))
-//    ->prependFile($this->basePath("/app/theme/directives/autoExpand.js"))
-//    ->prependFile($this->basePath("/app/theme/directives/animatedChange.js"))
-//    ->prependFile($this->basePath("/app/theme/components/toastrLibConfig.js"))
+    ->prependFile($this->basePath("/app/theme/directives/zoomIn.js"))
+    ->prependFile($this->basePath("/app/theme/directives/trackWidth.js"))
+    ->prependFile($this->basePath("/app/theme/directives/scrollPosition.js"))
+    ->prependFile($this->basePath("/app/theme/directives/ngFileSelect.js"))
+    ->prependFile($this->basePath("/app/theme/directives/ionSlider.js"))
+    ->prependFile($this->basePath("/app/theme/directives/includeWithScope.js"))
+    ->prependFile($this->basePath("/app/theme/directives/autoFocus.js"))
+    ->prependFile($this->basePath("/app/theme/directives/autoExpand.js"))
+    ->prependFile($this->basePath("/app/theme/directives/animatedChange.js"))
+    ->prependFile($this->basePath("/app/theme/components/toastrLibConfig.js"))
     ->prependFile($this->basePath("/app/theme/theme.service.js"))
     ->prependFile($this->basePath("/app/theme/theme.run.js"))
     ->prependFile($this->basePath("/app/theme/theme.constants.js"))
@@ -198,6 +199,8 @@
     ->prependFile($this->basePath("/app/pages/charts/amCharts/amCharts.module.js"))
     ->prependFile($this->basePath("/app/pages/charts/charts.module.js"))
 
+    ->prependFile($this->basePath("/app/pages/home/homePieChart/homePieChart.directive.js"))
+    ->prependFile($this->basePath("/app/pages/home/homePieChart/HomePieChartCtrl.js"))
     ->prependFile($this->basePath("/app/pages/home/home.module.js"))
 
     ->prependFile($this->basePath("/app/theme/components/components.module.js"))
