--- a/module/AuthDoctrine/view/auth-doctrine/index/index.phtml
+++ b/module/AuthDoctrine/view/auth-doctrine/index/index.phtml
@@ -1,16 +1,18 @@
+<? $title = $this->getHelperPluginManager()->getServiceLocator()->get('config')['siteTitle']; ?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>IMS-Assistant | Login</title>
+    <title><?=$title; ?> | Авторизация</title>
 
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900&subset=latin,greek,greek-ext,vietnamese,cyrillic-ext,latin-ext,cyrillic' rel='stylesheet' type='text/css'>
 
     <link rel="icon" type="image/png" sizes="16x16" href="<?=$this->basePath('/img/favicon-16x16.png'); ?>">
     <link rel="icon" type="image/png" sizes="32x32" href="<?=$this->basePath('/img/favicon-32x32.png'); ?>">
     <link rel="icon" type="image/png" sizes="96x96" href="<?=$this->basePath('/img/favicon-96x96.png'); ?>">
+    <link rel="icon" type="image/png" sizes="128x128" href="<?=$this->basePath('/img/favicon-128x128.png'); ?>">
 
     <?=$this->headLink()
         ->appendStylesheet($this->basePath('/bower/Ionicons/css/ionicons.css'))
@@ -27,7 +29,7 @@
 <main class="auth-main">
     <div class="auth-block">
         <h1>Авторизация в</h1>
-        <h2>IMS Assistant</h2>
+        <h2><?=$title; ?></h2>
 
         <? /* @var $loginForm \Zend\Form\Form */ ?>
         <?=$this->form($loginForm, TwbBundle\Form\View\Helper\TwbBundleForm::LAYOUT_HORIZONTAL);?>
