--- a/public/app/theme/components/pageTop/pageTop.html
+++ b/public/app/theme/components/pageTop/pageTop.html
@@ -1,11 +1,11 @@
 <div class="page-top clearfix" scroll-position="scrolled" max-height="50" ng-class="{'scrolled': scrolled}">
-  <a href="#/" class="al-logo clearfix"><span>IMS</span> Assistant</a>
+  <a href="#/" class="al-logo clearfix"><img src="/img/logo.png"></a>
   <a href class="collapse-menu-link ion-navicon" ba-sidebar-toggle-menu></a>
 
-  <div class="search">
+  <!--<div class="search">
     <i class="ion-ios-search-strong" ng-click="startSearch()"></i>
     <input id="searchInput" type="text" placeholder="Поиск...">
-  </div>
+  </div>-->
 
   <div class="user-profile clearfix">
     <div class="al-user-profile" uib-dropdown>
