--- a/module/Application/view/error/404.phtml
+++ b/module/Application/view/error/404.phtml
@@ -1,5 +1,6 @@
 <?
 //$header = "Ошибка 404 на сайте " . $this->getSiteParam('main_title') . ".";
+$this->headTitle('Страница не найдена (404)');
 $msg  = "<h1>" . $this->translate('A 404 error occurred') . "</h1>\n";
 $msg .= "<h2>" . $this->translate('Page not found.') . "</h2>\n";
 
@@ -99,6 +100,7 @@ $env = (getenv('APP_ENV') == 'development') ? true : false;
 if ($env) {
     echo $msg . $message;
 } else {
+    echo $msg;
     /*echo $msg;
     $this->sendMessage(
         \Emails\Entity\Email::TYPE_ERROR,
