--- a/module/Application/view/error/index.phtml
+++ b/module/Application/view/error/index.phtml
@@ -1,5 +1,6 @@
 <?
 //$header = "Ошибка на сайте " . $this->getSiteParam('main_title') . ".";
+$this->headTitle('Упс... Что-то пошло не так');
 $msg  = "<h1>" .  $this->translate('An error occurred') . "</h1>\n";
 $msg .= "<h2>" .  $this->translate($this->message) . "</h2>\n";
 
@@ -61,6 +62,7 @@ $env = (getenv('APP_ENV') == 'development') ? true : false;
 if ($env) {
     echo $msg . $message;
 } else {
+    echo $msg;
     /*echo $msg;
     $this->sendMessage(
         \Emails\Entity\Email::TYPE_ERROR,
