--- a/module/Application/view/error/layout.phtml
+++ b/module/Application/view/error/layout.phtml
@@ -1,3 +1,31 @@
-<h1>error/layout</h1>
-<br>
-<?=$this->content; ?>
+<?
+$title = $this->getHelperPluginManager()->getServiceLocator()->get('config')['siteTitle'];
+$copyright = $this->getHelperPluginManager()->getServiceLocator()->get('config')['siteCopyright'];
+echo $this->doctype();
+?>
+<html lang="en">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <base href="<?=$this->basePath('/'); ?>">
+
+    <?=$this->headMeta()
+        ->appendName('viewport', 'width=device-width, initial-scale=1.0')
+        ->appendHttpEquiv('X-UA-Compatible', 'IE=edge')
+    ?>
+
+    <?=$this->headTitle($title)->setSeparator(' | ')->setAutoEscape(false) ?>
+
+    <link rel="icon" type="image/png" sizes="16x16" href="<?=$this->basePath('/img/favicon-16x16.png'); ?>">
+    <link rel="icon" type="image/png" sizes="32x32" href="<?=$this->basePath('/img/favicon-32x32.png'); ?>">
+    <link rel="icon" type="image/png" sizes="96x96" href="<?=$this->basePath('/img/favicon-96x96.png'); ?>">
+    <link rel="icon" type="image/png" sizes="128x128" href="<?=$this->basePath('/img/favicon-128x128.png'); ?>">
+
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900&subset=latin,greek,greek-ext,vietnamese,cyrillic-ext,latin-ext,cyrillic' rel='stylesheet' type='text/css'>
+</head>
+<body>
+    <h1>error/layout</h1>
+    <br>
+    <?=$this->content; ?>
+</body>
+</html>
