--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -1,4 +1,5 @@
 <?
+$env = (getenv('APP_ENV') == 'development') ? true : false;
 $title = $this->getHelperPluginManager()->getServiceLocator()->get('config')['siteTitle'];
 $copyright = $this->getHelperPluginManager()->getServiceLocator()->get('config')['siteCopyright'];
 echo $this->doctype();
@@ -8,9 +9,7 @@ echo $this->doctype();
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <base href="<?=$this->basePath('/'); ?>">
-    <?=$this->headMeta()
-        ->appendName('viewport', 'width=device-width, initial-scale=1.0')
-        ->appendHttpEquiv('X-UA-Compatible', 'IE=edge')
+    <?=$this->headMeta()->appendName('viewport', 'width=device-width, initial-scale=1.0')->appendHttpEquiv('X-UA-Compatible', 'IE=edge')
     ?>
     
     <?=$this->headTitle($title)->setSeparator(' | ')->setAutoEscape(false) ?>
@@ -22,28 +21,12 @@ echo $this->doctype();
     
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900&subset=latin,greek,greek-ext,vietnamese,cyrillic-ext,latin-ext,cyrillic' rel='stylesheet' type='text/css'>
     
-    <?=$this->headLink()
-        ->appendStylesheet($this->basePath("/bower/Ionicons/css/ionicons.css"))
-        ->appendStylesheet($this->basePath("/bower/angular-toastr/dist/angular-toastr.css"))
-        ->appendStylesheet($this->basePath("/bower/animate.css/animate.css"))
-        ->appendStylesheet($this->basePath("/bower/bootstrap/dist/css/bootstrap.css"))
-        ->appendStylesheet($this->basePath("/bower/bootstrap-select/dist/css/bootstrap-select.css"))
-        ->appendStylesheet($this->basePath("/bower/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css"))
-        ->appendStylesheet($this->basePath("/bower/bootstrap-tagsinput/dist/bootstrap-tagsinput.css"))
-        ->appendStylesheet($this->basePath("/bower/font-awesome/css/font-awesome.css"))
-        ->appendStylesheet($this->basePath("/bower/fullcalendar/dist/fullcalendar.css"))
-        ->appendStylesheet($this->basePath("/bower/leaflet/dist/leaflet.css"))
-        ->appendStylesheet($this->basePath("/bower/angular-progress-button-styles/dist/angular-progress-button-styles.min.css"))
-        ->appendStylesheet($this->basePath("/bower/angular-chart.js/dist/angular-chart.css"))
-        ->appendStylesheet($this->basePath("/bower/chartist/dist/chartist.min.css"))
-        ->appendStylesheet($this->basePath("/bower/morris.js/morris.css"))
-        ->appendStylesheet($this->basePath("/bower/ionrangeslider/css/ion.rangeSlider.css"))
-        ->appendStylesheet($this->basePath("/bower/ionrangeslider/css/ion.rangeSlider.skinFlat.css"))
-        ->appendStylesheet($this->basePath("/bower/textAngular/dist/textAngular.css"))
-        ->appendStylesheet($this->basePath("/bower/angular-xeditable/dist/css/xeditable.css"))
-        ->appendStylesheet($this->basePath("/bower/jstree/dist/themes/default/style.css"))
-        ->appendStylesheet($this->basePath("app/main.css"))
-    ?>
+    <? if ($env) {
+        foreach ($this->getCssCollection() as $css) $this->headLink()->appendStylesheet($this->basePath($css));
+    } else {
+        $this->headLink()->prependStylesheet($this->basePath('css/core.css'));
+    } ?>
+    <?=$this->headLink(); ?>
     
 </head>
 <body>
@@ -68,206 +51,12 @@ echo $this->doctype();
     <div></div>
 </div>
 <?=$this->inlineScript() ?>
-<?=$this->headScript()
-    ->prependFile($this->basePath("/app/theme/components/backTop/lib/jquery.backTop.min.js"))
-    ->prependFile($this->basePath("/app/theme/components/backTop/backTop.directive.js"))
-    ->prependFile($this->basePath("/app/theme/filters/text/removeHtml.js"))
-    ->prependFile($this->basePath("/app/theme/filters/image/profilePicture.js"))
-    ->prependFile($this->basePath("/app/theme/filters/image/kameleonImg.js"))
-    ->prependFile($this->basePath("/app/theme/filters/image/appImage.js"))
-    ->prependFile($this->basePath("/app/theme/components/widgets/widgets.directive.js"))
-    ->prependFile($this->basePath("/app/theme/components/pageTop/pageTop.directive.js"))
-    ->prependFile($this->basePath("/app/theme/components/msgCenter/msgCenter.directive.js"))
-    ->prependFile($this->basePath("/app/theme/components/msgCenter/MsgCenterCtrl.js"))
-    ->prependFile($this->basePath("/app/theme/components/contentTop/contentTop.directive.js"))
-    ->prependFile($this->basePath("/app/theme/components/baWizard/baWizardStep.directive.js"))
-    ->prependFile($this->basePath("/app/theme/components/baWizard/baWizardCtrl.js"))
-    ->prependFile($this->basePath("/app/theme/components/baWizard/baWizard.directive.js"))
-    ->prependFile($this->basePath("/app/theme/components/baSidebar/baSidebarHelpers.directive.js"))
-    ->prependFile($this->basePath("/app/theme/components/baSidebar/baSidebar.service.js"))
-    ->prependFile($this->basePath("/app/theme/components/baSidebar/baSidebar.directive.js"))
-    ->prependFile($this->basePath("/app/theme/components/baSidebar/BaSidebarCtrl.js"))
-    ->prependFile($this->basePath("/app/theme/components/baPanel/baPanelSelf.directive.js"))
-    ->prependFile($this->basePath("/app/theme/components/baPanel/baPanelBlurHelper.service.js"))
-    ->prependFile($this->basePath("/app/theme/components/baPanel/baPanelBlur.directive.js"))
-    ->prependFile($this->basePath("/app/theme/components/baPanel/baPanel.service.js"))
-    ->prependFile($this->basePath("/app/theme/components/baPanel/baPanel.directive.js"))
-    ->prependFile($this->basePath("/app/theme/services/stopableInterval.js"))
-    ->prependFile($this->basePath("/app/theme/services/preloader.js"))
-    ->prependFile($this->basePath("/app/theme/services/fileReader.js"))
-    ->prependFile($this->basePath("/app/theme/services/baUtil.js"))
-    ->prependFile($this->basePath("/app/theme/directives/zoomIn.js"))
-    ->prependFile($this->basePath("/app/theme/directives/trackWidth.js"))
-    ->prependFile($this->basePath("/app/theme/directives/scrollPosition.js"))
-    ->prependFile($this->basePath("/app/theme/directives/ngFileSelect.js"))
-    ->prependFile($this->basePath("/app/theme/directives/ionSlider.js"))
-    ->prependFile($this->basePath("/app/theme/directives/includeWithScope.js"))
-    ->prependFile($this->basePath("/app/theme/directives/autoFocus.js"))
-    ->prependFile($this->basePath("/app/theme/directives/autoExpand.js"))
-    ->prependFile($this->basePath("/app/theme/directives/animatedChange.js"))
-    ->prependFile($this->basePath("/app/theme/components/toastrLibConfig.js"))
-    ->prependFile($this->basePath("/app/theme/theme.service.js"))
-    ->prependFile($this->basePath("/app/theme/theme.run.js"))
-    ->prependFile($this->basePath("/app/theme/theme.constants.js"))
-    ->prependFile($this->basePath("/app/theme/theme.configProvider.js"))
-    ->prependFile($this->basePath("/app/theme/theme.config.js"))
-    ->prependFile($this->basePath("/app/app.js"))
 
-    ->prependFile($this->basePath("/app/pages/ui/modals/notifications/NotificationsCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/ui/notifications/NotificationsPageCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/ui/modals/ModalsPageCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/ui/icons/IconsPageCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/ui/buttons/ButtonPageCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/ui/typography/typography.module.js"))
-    ->prependFile($this->basePath("/app/pages/ui/tabs/tabs.module.js"))
-    ->prependFile($this->basePath("/app/pages/ui/slider/slider.module.js"))
-    ->prependFile($this->basePath("/app/pages/ui/progressBars/progressBars.module.js"))
-    ->prependFile($this->basePath("/app/pages/ui/panels/panels.module.js"))
-    ->prependFile($this->basePath("/app/pages/ui/notifications/notifications.module.js"))
-    ->prependFile($this->basePath("/app/pages/ui/modals/modals.module.js"))
-    ->prependFile($this->basePath("/app/pages/ui/icons/icons.module.js"))
-    ->prependFile($this->basePath("/app/pages/ui/grid/grid.module.js"))
-    ->prependFile($this->basePath("/app/pages/ui/buttons/buttons.module.js"))
-    ->prependFile($this->basePath("/app/pages/ui/alerts/alerts.module.js"))
-    ->prependFile($this->basePath("/app/pages/ui/ui.module.js"))
-
-    ->prependFile($this->basePath("/app/pages/tables/TablesPageCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/tables/tables.module.js"))
-
-    ->prependFile($this->basePath("/app/pages/profile/ProfilePageCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/profile/ProfileModalCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/profile/profile.module.js"))
-
-//    ->prependFile($this->basePath("/app/pages/maps/map-lines/MapLinesPageCtrl.js"))
-//    ->prependFile($this->basePath("/app/pages/maps/map-bubbles/MapBubblePageCtrl.js"))
-//    ->prependFile($this->basePath("/app/pages/maps/leaflet/LeafletPageCtrl.js"))
-//    ->prependFile($this->basePath("/app/pages/maps/google-maps/GmapPageCtrl.js"))
-//    ->prependFile($this->basePath("/app/pages/maps/maps.module.js"))
-
-    ->prependFile($this->basePath("/app/pages/form/inputs/widgets/tagsInput/tagsInput.directive.js"))
-    ->prependFile($this->basePath("/app/pages/form/inputs/widgets/switch/switch.directive.js"))
-    ->prependFile($this->basePath("/app/pages/form/inputs/widgets/switch/SwitchPanelCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/form/inputs/widgets/select/selectpicker.directive.js"))
-    ->prependFile($this->basePath("/app/pages/form/inputs/widgets/select/SelectpickerPanelCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/form/wizard/wizrdCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/form/form.module.js"))
-
-    ->prependFile($this->basePath("/app/pages/dashboard/weather/weather.directive.js"))
-    ->prependFile($this->basePath("/app/pages/dashboard/weather/WeatherCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/dashboard/trafficChart/trafficChart.directive.js"))
-    ->prependFile($this->basePath("/app/pages/dashboard/trafficChart/TrafficChartCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/dashboard/popularApp/popularApp.directive.js"))
-    ->prependFile($this->basePath("/app/pages/dashboard/pieCharts/dashboardPieChart.js"))
-    ->prependFile($this->basePath("/app/pages/dashboard/dashboardTodo/dashboardTodo.directive.js"))
-    ->prependFile($this->basePath("/app/pages/dashboard/dashboardTodo/DashboardTodoCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/dashboard/dashboardPieChart/dashboardPieChart.directive.js"))
-    ->prependFile($this->basePath("/app/pages/dashboard/dashboardPieChart/DashboardPieChartCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/dashboard/dashboardMap/dashboardMap.directive.js"))
-    ->prependFile($this->basePath("/app/pages/dashboard/dashboardMap/DashboardMapCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/dashboard/dashboardLineChart/dashboardLineChart.directive.js"))
-    ->prependFile($this->basePath("/app/pages/dashboard/dashboardLineChart/DashboardLineChartCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/dashboard/dashboardCalendar/dashboardCalendar.directive.js"))
-    ->prependFile($this->basePath("/app/pages/dashboard/dashboardCalendar/DashboardCalendarCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/dashboard/calendar/dashboardCalendar.js"))
-    ->prependFile($this->basePath("/app/pages/dashboard/blurFeed/blurFeed.directive.js"))
-    ->prependFile($this->basePath("/app/pages/dashboard/blurFeed/BlurFeedCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/dashboard/dashboard.module.js"))
-
-    ->prependFile($this->basePath("/app/pages/components/mail/list/MailListCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/components/mail/detail/MailDetailCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/components/mail/composeBox/composeModal.js"))
-    ->prependFile($this->basePath("/app/pages/components/mail/composeBox/composeBoxCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/components/tree/treeCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/components/timeline/TimelineCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/components/mail/mailMessages.js"))
-    ->prependFile($this->basePath("/app/pages/components/mail/MailTabCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/components/tree/tree.module.js"))
-    ->prependFile($this->basePath("/app/pages/components/timeline/timeline.module.js"))
-    ->prependFile($this->basePath("/app/pages/components/mail/mail.module.js"))
-    ->prependFile($this->basePath("/app/pages/components/components.module.js"))
-
-    ->prependFile($this->basePath("/app/pages/charts/amCharts/pieChart/PieChartCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/charts/amCharts/lineChart/LineChartCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/charts/amCharts/ganttChart/ganttChartCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/charts/amCharts/funnelChart/FunnelChartCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/charts/amCharts/combinedChart/combinedChartCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/charts/amCharts/barChart/BarChartCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/charts/amCharts/areaChart/AreaChartCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/charts/morris/morrisCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/charts/chartist/chartistCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/charts/chartJs/chartJsWaveCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/charts/chartJs/chartJs2DCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/charts/chartJs/chartJs1DCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/charts/morris/morris.module.js"))
-    ->prependFile($this->basePath("/app/pages/charts/chartist/chartist.module.js"))
-    ->prependFile($this->basePath("/app/pages/charts/chartJs/chartJs.module.js"))
-    ->prependFile($this->basePath("/app/pages/charts/amCharts/amCharts.module.js"))
-    ->prependFile($this->basePath("/app/pages/charts/charts.module.js"))
-
-    ->prependFile($this->basePath("/app/pages/home/homeParseJson/homeParseJson.directive.js"))
-    ->prependFile($this->basePath("/app/pages/home/homeParseJson/HomeParseJsonCtrl.js"))
-    ->prependFile($this->basePath("/app/pages/home/home.module.js"))
-
-    ->prependFile($this->basePath("/app/theme/components/components.module.js"))
-    ->prependFile($this->basePath("/app/theme/theme.module.js"))
-    ->prependFile($this->basePath("/app/pages/pages.module.js"))
-    
-//    ->prependFile("http://maps.google.com/maps/api/js?sensor=false")
-    
-    ->prependFile($this->basePath("/bower/ng-js-tree/dist/ngJsTree.js"))
-    ->prependFile($this->basePath("/bower/jstree/dist/jstree.js"))
-    ->prependFile($this->basePath("/bower/angular-xeditable/dist/js/xeditable.js"))
-    ->prependFile($this->basePath("/bower/textAngular/dist/textAngularSetup.js"))
-    ->prependFile($this->basePath("/bower/textAngular/dist/textAngular-sanitize.js"))
-    ->prependFile($this->basePath("/bower/textAngular/dist/textAngular.js"))
-    ->prependFile($this->basePath("/bower/rangy/rangy-textrange.js"))
-    ->prependFile($this->basePath("/bower/rangy/rangy-serializer.js"))
-    ->prependFile($this->basePath("/bower/rangy/rangy-selectionsaverestore.js"))
-    ->prependFile($this->basePath("/bower/rangy/rangy-highlighter.js"))
-    ->prependFile($this->basePath("/bower/rangy/rangy-classapplier.js"))
-    ->prependFile($this->basePath("/bower/rangy/rangy-core.js"))
-    ->prependFile($this->basePath("/bower/angular-animate/angular-animate.js"))
-    ->prependFile($this->basePath("/bower/angular-bootstrap/ui-bootstrap-tpls.js"))
-    ->prependFile($this->basePath("/bower/ionrangeslider/js/ion.rangeSlider.js"))
-    ->prependFile($this->basePath("/bower/angular-morris-chart/src/angular-morris-chart.min.js"))
-    ->prependFile($this->basePath("/bower/morris.js/morris.js"))
-    ->prependFile($this->basePath("/bower/mocha/mocha.js"))
-    ->prependFile($this->basePath("/bower/raphael/raphael.min.js"))
-    ->prependFile($this->basePath("/bower/eve/eve.js"))
-    ->prependFile($this->basePath("/bower/angular-chartist.js/dist/angular-chartist.js"))
-    ->prependFile($this->basePath("/bower/chartist/dist/chartist.min.js"))
-    ->prependFile($this->basePath("/bower/angular-chart.js/dist/angular-chart.js"))
-    ->prependFile($this->basePath("/bower/angular-ui-router/release/angular-ui-router.js"))
-    ->prependFile($this->basePath("/bower/angular-progress-button-styles/dist/angular-progress-button-styles.min.js"))
-    ->prependFile($this->basePath("/bower/leaflet/dist/leaflet-src.js"))
-    ->prependFile($this->basePath("/bower/jquery.easy-pie-chart/dist/jquery.easypiechart.js"))
-    ->prependFile($this->basePath("/bower/jquery.easing/js/jquery.easing.js"))
-    ->prependFile($this->basePath("/bower/fullcalendar/dist/fullcalendar.js"))
-    ->prependFile($this->basePath("/bower/moment/moment.js"))
-    ->prependFile($this->basePath("/bower/bootstrap-tagsinput/dist/bootstrap-tagsinput.js"))
-    ->prependFile($this->basePath("/bower/bootstrap-switch/dist/js/bootstrap-switch.js"))
-    ->prependFile($this->basePath("/bower/bootstrap-select/dist/js/bootstrap-select.js"))
-    ->prependFile($this->basePath("/bower/bootstrap/js/dropdown.js"))
-    ->prependFile($this->basePath("/bower/angular-ui-sortable/sortable.js"))
-    ->prependFile($this->basePath("/bower/jquery-ui/jquery-ui.js"))
-    ->prependFile($this->basePath("/bower/angular-touch/angular-touch.js"))
-    ->prependFile($this->basePath("/bower/angular-toastr/dist/angular-toastr.tpls.js"))
-    ->prependFile($this->basePath("/bower/angular-smart-table/dist/smart-table.js"))
-    ->prependFile($this->basePath("/bower/angular-slimscroll/angular-slimscroll.js"))
-    ->prependFile($this->basePath("/bower/slimScroll/jquery.slimscroll.js"))
-    ->prependFile($this->basePath("/bower/angular-route/angular-route.js"))
-    ->prependFile($this->basePath("/bower/angular/angular.js"))
-    ->prependFile($this->basePath("/bower/ammap/dist/ammap/maps/js/worldLow.js"))
-    ->prependFile($this->basePath("/bower/ammap/dist/ammap/ammap.js"))
-    ->prependFile($this->basePath("/bower/amcharts-stock/dist/amcharts/amstock.js"))
-    ->prependFile($this->basePath("/bower/amcharts/dist/amcharts/gantt.js"))
-    ->prependFile($this->basePath("/bower/amcharts/dist/amcharts/pie.js"))
-    ->prependFile($this->basePath("/bower/amcharts/dist/amcharts/funnel.js"))
-    ->prependFile($this->basePath("/bower/amcharts/dist/amcharts/serial.js"))
-    ->prependFile($this->basePath("/bower/amcharts/dist/amcharts/plugins/responsive/responsive.min.js"))
-    ->prependFile($this->basePath("/bower/amcharts/dist/amcharts/amcharts.js"))
-    ->prependFile($this->basePath("/bower/Chart.js/Chart.js"))
-    ->prependFile($this->basePath("/bower/jquery/dist/jquery.js"));
-?>
+<? if ($env) {
+    foreach ($this->getJsCollection() as $js) $this->headScript()->prependFile($this->basePath($js));
+} else {
+    $this->headScript()->prependFile($this->basePath('js/core.js'));
+} ?>
+<?=$this->headScript(); ?>
 </body>
 </html>
