--- a/public/app/theme/components/treeDnD/template-render.html
+++ b/public/app/theme/components/treeDnD/template-render.html
@@ -13,7 +13,7 @@
     <tbody tree-dnd-nodes="tree_nodes">
     <tr tree-dnd-node="node" ng-repeat="node in nodes track by node.__hashKey__ "
         ng-show="enabledFilter ? node.__filtered_visible__ === true && node.__visible__ : node.__visible__"
-        ng-class="(enabledFilter ? (node.__filtered__ === true? 'success': '') : '') + (node.__expanded__ || node.__parent__ ? ' active':'')"
+        ng-class="(enabledFilter ? (node.__filtered__ === true? 'success': '') : '') + (node.__expanded__ || (node.__level__ > 1) ? ' active':'')"
         data-ng-click="console.log(node.__parent__.__expanded__);"
         ng-click="onSelect(node)"
         collapsed="true">
