--- a/public/app/404.css
+++ b/public/app/404.css
@@ -3,8 +3,8 @@ html {
   min-width: 320px; }
 
 html, body {
-  min-height: 100%;
-  height: 100%; }
+  min-height: calc(100% - 8px);
+  height: calc(100% - 8px); }
 
 body {
   font: 12px/16px "Roboto", sans-serif;
@@ -22,7 +22,7 @@ body {
     height: 100%;
     top: 0;
     left: 0;
-    background: url("../assets/img/blur-bg.jpg") no-repeat center center;
+    background: url("../img/blur-bg.jpg") no-repeat center center;
     background-size: cover;
     will-change: transform;
     z-index: -1; }
