--- a/public/app/theme/components/pageTop/pageTop.html
+++ b/public/app/theme/components/pageTop/pageTop.html
@@ -10,15 +10,15 @@
   <div class="user-profile clearfix">
     <div class="al-user-profile" uib-dropdown>
       <a uib-dropdown-toggle class="profile-toggle-link">
-        <img ng-src="{{::( 'Nasta' | profilePicture )}}">
+        <img ng-src="{{user.grAvatar}}">
       </a>
       <ul  class="top-dropdown-menu profile-dropdown" uib-dropdown-menu>
         <li><i class="dropdown-arr"></i></li>
-        <li><a href="#/profile"><i class="fa fa-user"></i>Profile</a></li>
-        <li><a href><i class="fa fa-cog"></i>Settings</a></li>
-        <li><a href class="signout"><i class="fa fa-power-off"></i>Sign out</a></li>
+        <li><span>{{user.name}}</span></li>
+        <li><a href><i class="fa fa-user"></i>Profile</a></li>
       </ul>
     </div>
+    <a class="pull-right change-user" href ng-click="modalActions.open()" ng-class="$getPermissions() ? 'admin' : ''"><i class="fa fa-address-book-o"></i></a>
     <!--<msg-center></msg-center>-->
   </div>
 </div>
