Добавил галлерею в nomenclature list * удалил представления из модулей, в которых их не должно быть * добавил сервисы (сервис уведомлений) * + мелкие правки в авторизации

--- a/public/app/theme/components/pageTop/pageTop.html
+++ b/public/app/theme/components/pageTop/pageTop.html
@@ -19,6 +19,6 @@
       </ul>
     </div>
     <a class="pull-right change-user" href ng-click="modalActions.open()" ng-class="$getPermissions() ? 'admin' : ''"><i class="fa fa-address-book-o"></i></a>
-    <!--<msg-center></msg-center>-->
+    <msg-center></msg-center>
   </div>
 </div>
