--- a/public/app/main.css
+++ b/public/app/main.css
@@ -4268,6 +4268,12 @@ h1.al-title {
       .top-dropdown-menu .msg-list > a .img-area {
         float: left;
         width: 36px; }
+        .top-dropdown-menu .msg-list > a .img-area i {
+          color: #e85656;
+          font-size: 26px;
+          border-radius: 18px;
+          border: 2px solid #e85656;
+          padding: 2px 10px 0; }
         .top-dropdown-menu .msg-list > a .img-area img {
           width: 36px;
           height: 36px; }
@@ -6465,3 +6471,4 @@ a.change-user {
   color: #a2a2a2;
   white-space: nowrap;
 }
+.modal-exlg { width: 1150px; }
