--- a/module/Application/view/error/layout.phtml
+++ b/module/Application/view/error/layout.phtml
@@ -1,12 +1,12 @@
 <?
 $title = $this->getHelperPluginManager()->getServiceLocator()->get('config')['siteTitle'];
-$copyright = $this->getHelperPluginManager()->getServiceLocator()->get('config')['siteCopyright'];
 echo $this->doctype();
 ?>
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="<?=$this->basePath('/'); ?>">
 
     <?=$this->headMeta()
@@ -22,10 +22,14 @@ echo $this->doctype();
     <link rel="icon" type="image/png" sizes="128x128" href="<?=$this->basePath('/img/favicon-128x128.png'); ?>">
 
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900&subset=latin,greek,greek-ext,vietnamese,cyrillic-ext,latin-ext,cyrillic' rel='stylesheet' type='text/css'>
+
+    <?=$this->headLink()
+        ->appendStylesheet($this->basePath("/app/404.css")) ?>
 </head>
 <body>
-    <h1>error/layout</h1>
-    <br>
-    <?=$this->content; ?>
+    <div class="page-not-found-modal">
+        <?=$this->content; ?>
+    </div>
+<?=$this->headScript(); ?>
 </body>
 </html>
