--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -4,13 +4,13 @@ $title = $this->getHelperPluginManager()->getServiceLocator()->get('config')['si
 $copyright = $this->getHelperPluginManager()->getServiceLocator()->get('config')['siteCopyright'];
 echo $this->doctype();
 ?>
-<html lang="en" ng-app="BlurAdmin">
+<html lang="ru" ng-app="BlurAdmin">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <base href="<?=$this->basePath('/'); ?>">
     <?=$this->headMeta()->appendName('viewport', 'width=device-width, initial-scale=1.0')->appendHttpEquiv('X-UA-Compatible', 'IE=edge')
     ?>
+    <base href="<?=$this->basePath('/'); ?>">
     
     <?=$this->headTitle($title)->setSeparator(' | ')->setAutoEscape(false) ?>
 
