Реализовал лог ошибок в БД

--- a/module/Application/view/error/index.phtml
+++ b/module/Application/view/error/index.phtml
@@ -5,6 +5,7 @@ $this->headTitle('Упс... Что-то пошло не так');
 $msg  = "<h1>" .  $this->translate('An error occurred') . "</h1>\n";
 $msg .= "<p>" .  $this->translate($this->message) . (($env) ? '' : "<br>Вы можете вернуться <a href='javascript:window.history.back(-1)'>назад</a> или на <a href='/'>главную страницу</a>") . "</p>\n";
 
+$message = '';
 if (isset($this->display_exceptions) && $this->display_exceptions) {
     if (isset($this->exception) && $this->exception instanceof Exception) {
         $message = "<hr/>";
