Перелопатил чуть меньше, че пол проекта: 1) Доработал модуль assets. теперь в dev версии в 1 файл собираются сторонние библиотеки 2) Доработал модуль AuthDoctrine. реализовал запись currentRole в identity.   // на данный момент этот параметр не используется. 3) Добавил в sql-запросы префикс из конфигов. 4) Переделал механизм преобразования сущьности в массив. теперь массив отдается по доступным полям, а не по методам. 5) Добавил возможность удалять деталь из заказа с сохранением/удалением детали в зависимости от содержимого детали. 6) Добавил вывод архивированных деталей и возможность их импорта. 7) Доработал механизм удаления версий. 8) Добавил фильтр для событий (все еще только вывод)

--- a/public/app/main.css
+++ b/public/app/main.css
@@ -3736,6 +3736,7 @@ th {
   height: calc(100vh - 283px); }
 
 .panel {
+  z-index: 1;
   color: #666666;
   background-color: #ffffff;
   border: none;
@@ -6592,3 +6593,7 @@ a.change-user {
   margin: 20px auto 0 auto;
   font-size: 60px;
   height: 60px; }
+  .timeline-loading i { display: none; }
+    .timeline-loading.loading i { display: block; }
+.table-dropdown { display: inline-table; }
+.empty-nomenclature { text-align: center; margin: 9px 0; }
