--- a/public/app/theme/components/pageTop/modal/reLogin.html
+++ b/public/app/theme/components/pageTop/modal/reLogin.html
@@ -1,6 +1,6 @@
 <div class="modal-content">
     <div class="modal-header">
-        <button type="button" class="close" ng-click="modalActions.close()" aria-label="Close">
+        <button type="button" class="close" ng-click="$dismiss()" aria-label="Close">
             <em class="ion-ios-close-empty sn-link-close"></em>
         </button>
         <h4 class="modal-title" id="pattern-modal-label">Выбор пользователя</h4>
