--- a/public/app/theme/components/pageTop/pageTop.html
+++ b/public/app/theme/components/pageTop/pageTop.html
@@ -12,13 +12,13 @@
       <a uib-dropdown-toggle class="profile-toggle-link">
         <img ng-src="{{user.grAvatar}}">
       </a>
-      <ul  class="top-dropdown-menu profile-dropdown" uib-dropdown-menu>
+      <ul class="top-dropdown-menu profile-dropdown" uib-dropdown-menu>
         <li><i class="dropdown-arr"></i></li>
         <li><span>{{user.name}}</span></li>
-        <li><a href><i class="fa fa-user"></i>Profile</a></li>
+        <li><a href ng-click="modalActions.editUser()"><i class="fa fa-user"></i>Редактировать</a></li>
       </ul>
     </div>
-    <a class="pull-right change-user" href ng-click="modalActions.open()" ng-class="$getPermissions() ? 'admin' : ''"><i class="fa fa-address-book-o"></i></a>
+    <a class="pull-right change-user" href ng-click="modalActions.reLogin()" ng-class="$getPermissions() ? 'admin' : ''"><i class="fa fa-sign-in"></i></a>
     <msg-center></msg-center>
   </div>
 </div>
